; ModuleID = '/home/carl/AnghaBench/git/refs/extr_ref-cache.c_ref_entry_cmp_sslice.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_ref-cache.c_ref_entry_cmp_sslice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_slice = type { i64, i32 }
%struct.ref_entry = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @ref_entry_cmp_sslice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ref_entry_cmp_sslice(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.string_slice*, align 8
  %7 = alloca %struct.ref_entry*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.string_slice*
  store %struct.string_slice* %10, %struct.string_slice** %6, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to %struct.ref_entry**
  %13 = load %struct.ref_entry*, %struct.ref_entry** %12, align 8
  store %struct.ref_entry* %13, %struct.ref_entry** %7, align 8
  %14 = load %struct.string_slice*, %struct.string_slice** %6, align 8
  %15 = getelementptr inbounds %struct.string_slice, %struct.string_slice* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.ref_entry*, %struct.ref_entry** %7, align 8
  %18 = getelementptr inbounds %struct.ref_entry, %struct.ref_entry* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = load %struct.string_slice*, %struct.string_slice** %6, align 8
  %21 = getelementptr inbounds %struct.string_slice, %struct.string_slice* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @strncmp(i32 %16, i64* %19, i64 %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* %8, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %2
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %3, align 4
  br label %40

28:                                               ; preds = %2
  %29 = load %struct.ref_entry*, %struct.ref_entry** %7, align 8
  %30 = getelementptr inbounds %struct.ref_entry, %struct.ref_entry* %29, i32 0, i32 0
  %31 = load i64*, i64** %30, align 8
  %32 = load %struct.string_slice*, %struct.string_slice** %6, align 8
  %33 = getelementptr inbounds %struct.string_slice, %struct.string_slice* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = getelementptr inbounds i64, i64* %31, i64 %34
  %36 = load i64, i64* %35, align 8
  %37 = trunc i64 %36 to i8
  %38 = zext i8 %37 to i32
  %39 = sub nsw i32 0, %38
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %28, %26
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @strncmp(i32, i64*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
